// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DelegateListingHeader test render DelegateListingHeader 1`] = `
<div>
  <div
    class="Layout--horizontal StyledProps--main delegateListHeader"
  >
    <div
      style="width: 80px;"
    />
    <div
      style="width: 30%;"
    >
      delegate.DelegateName
    </div>
    <div
      style="width: 25%;"
    >
      tagsLabel
    </div>
    <div
      style="width: 10%;"
    >
      instanceFieldOptions.instances
    </div>
    <div
      style="width: calc(15% - 40px);"
    >
      delegate.LastHeartBeat
    </div>
    <div
      style="width: calc(15% - 40px);"
    >
      connectivityStatus
    </div>
    <div
      style="width: 5%;"
    />
  </div>
</div>
`;

exports[`Delegates Listing With Groups Click on item 1`] = `
<div>
  <div>
    <h1>
      Not Found
    </h1>
    <div
      data-testid="location"
    >
      /account/undefined/settings/resources/delegate/delGroupIdentifier1
    </div>
  </div>
</div>
`;

exports[`Delegates Listing With Groups click on delegate item action 1`] = `
<div>
  <div
    class="bp3-card bp3-interactive bp3-elevation-2 Card--card delegateItemContainer Card--interactive"
    tabindex="0"
  >
    <div
      class="Layout--horizontal StyledProps--main delegateItemSubcontainer"
    >
      <div
        class="delegateItemIcon"
        style="width: 80px;"
      >
        <span
          class="bp3-icon bp3-icon-chevron-right StyledProps--main expandIcon"
          icon="chevron-right"
        >
          <svg
            data-icon="chevron-right"
            height="20"
            viewBox="0 0 20 20"
            width="20"
          >
            <desc>
              chevron-right
            </desc>
            <path
              d="M13.71 9.29l-6-6a1.003 1.003 0 00-1.42 1.42l5.3 5.29-5.29 5.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l6-6c.18-.18.29-.43.29-.71 0-.28-.11-.53-.29-.71z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        <p
          class="StyledProps--font StyledProps--main"
          style="display: flex; align-items: center;"
        >
          <span
            class="bp3-icon StyledProps--main Text--icon StyledProps--padding-right-xsmall"
            data-icon="app-kubernetes"
          >
            <svg
              height="24"
              viewBox="0 0 32 30"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g
                fill="none"
              >
                <path
                  d="M15.94.023c-.228 0-.457 0-.685.229L4.512 5.28c-.457.229-.915.686-1.143 1.372L.626 18.08c-.229.457 0 1.143.229 1.6l.228.229 7.314 9.143c.458.457.915.685 1.6.685h11.886c.686 0 1.143-.228 1.6-.685l7.314-9.143c.458-.457.458-1.143.458-1.6L28.512 6.88c-.229-.685-.457-1.143-1.143-1.371L16.626.48c0-.228-.457-.457-.686-.457z"
                  fill="#326CE5"
                />
                <path
                  d="M15.94 3.909c-.457 0-.685.228-.685.686v2.057c0 .228-.229.228-.229.228v.229c-.457 0-.686 0-1.143.228-1.6.458-3.2 1.143-4.114 2.286l-.229-.228h-.457c-.228-.23-.457-.458-.914-.686l-.457-.457h-.229c-.228 0-.228-.229-.457-.229s-.457 0-.457.229c-.229.228-.229.685.228.914h.23c.228.229.456.229.456.229.457.228.686.457.914.685 0 0 .23.229.23.457l.228.229c-1.143 1.6-1.6 3.657-1.372 5.714h-.228l-.229.229c-.229 0-.686.228-1.143.228H4.97c-.457 0-.686.458-.457.686 0 .229.457.457.914.457h.229c.228 0 .457-.228.685-.228.457-.229.686-.229 1.143-.229.229 0 .229 0 .457.229h.229c.686 2.057 2.057 3.657 3.657 4.571l-.229.229v.457c-.228.228-.228.686-.685 1.143-.229.228-.229.228-.229.457v.228c-.228.458 0 .686.229.915.228.228.685 0 .914-.457v-.23c0-.228.229-.456.229-.685.228-.457.228-.914.457-1.143 0 0 .228 0 .228-.228l.229-.229c1.371.457 3.2.686 4.8.457.457 0 .686-.228 1.143-.228l.228.228s.229 0 .229.229c.228.229.228.686.457 1.143 0 .228 0 .457.229.686v.228c.228.457.457.457.914.457.228-.228.457-.457.228-.914v-.229c0-.228-.228-.228-.228-.457-.229-.457-.457-.685-.457-.914v-.686c1.828-1.143 2.971-2.743 3.657-4.571h.228s.23-.229.458-.229.685.229 1.142.229c.23 0 .458.228.686.228h.229c.457 0 .685-.228.914-.457 0-.228-.229-.685-.457-.685h-.914c-.458 0-.915 0-1.143-.23-.229 0-.229-.228-.229-.228h-.228c.228-.914 0-2.057-.229-2.971-.229-.914-.686-2.057-1.143-2.743l.229-.228c0-.23 0-.23.228-.458.229-.228.457-.457.915-.685.228 0 .457-.229.457-.229h.228c.229-.228.457-.686.229-.914-.229-.229-.686-.229-.914 0h-.229l-.457.457c-.229.229-.686.686-.914.686h-.458l-.228.228a8.778 8.778 0 00-5.257-2.514v-.229l-.229-.228V5.052c-.457-.686-.686-1.143-1.143-1.143zm-.685 5.028l-.229 3.429a.492.492 0 01-.457.457h-.229l-2.743-2.057c.915-.914 1.83-1.371 3.2-1.829h.458zm1.6 0c1.371.229 2.742.915 3.885 1.829l-2.743 1.829c-.228.228-.685.228-.685 0l-.229-.23-.228-3.428zm-6.4 3.2l2.514 2.286c.228.229.228.457 0 .686l-.229.228-3.2.915c-.228-1.6 0-2.972.915-4.115zm11.2 0c.457.686.685 1.372.914 2.058.228.685.228 1.37.228 2.057l-3.2-.915c-.228 0-.457-.457-.457-.685 0-.229 0-.229.229-.229l2.286-2.286zm-6.172 2.286h.914l.686.686-.228.914-.915.457-.914-.457-.229-.914.686-.686zm3.2 2.743c.229 0 .229 0 0 0l3.429.457c-.457 1.372-1.372 2.514-2.743 3.429l-1.372-3.2c.23-.229.23-.457.686-.686h0zm-5.486 0c.23 0 .458.229.458.457v.457l-1.372 3.2c-1.143-.685-2.057-1.828-2.743-3.428l3.657-.686zm2.743 1.371h.229l.228.229 1.6 2.971c-.228 0-.457.229-.685.229-1.143.229-2.515.229-3.657-.229l1.6-2.971c.457 0 .457-.229.685-.229h0z"
                  fill="#FFF"
                  stroke="#FFF"
                  stroke-width="0.25"
                />
              </g>
            </svg>
          </span>
        </p>
      </div>
      <div
        class="Layout--horizontal StyledProps--main"
        data-testid="groupHostName1"
        style="width: 30%;"
      >
        <div
          class="Layout--vertical StyledProps--main"
        >
          <div
            class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
            data-testid="Group1"
          >
            <p
              class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-black"
            >
              Group1
            </p>
          </div>
          <div
            class="groupHostName"
          >
            groupHostName1
          </div>
        </div>
      </div>
      <div
        class="StyledProps--font StyledProps--main connectivity"
        style="width: 25%;"
      >
        <div
          class="StyledProps--font StyledProps--main"
          style="display: inline-flex; flex-wrap: wrap;"
        />
        <span />
      </div>
      <div
        class="Layout--horizontal StyledProps--main instancesColumn"
        style="width: 10%;"
      >
        0
      </div>
      <div
        class="Layout--horizontal StyledProps--main"
        style="width: calc(15% - 40px);"
      >
        dummy date
      </div>
      <div
        class="Layout--vertical StyledProps--main"
        style="width: calc(15% - 40px);"
      >
        <p
          class="StyledProps--font StyledProps--main"
          style="display: flex; align-items: center;"
        >
          <span
            class="bp3-icon bp3-icon-full-circle StyledProps--main Text--icon StyledProps--padding-small StyledProps--color StyledProps--color-grey400"
            icon="full-circle"
          >
            <svg
              data-icon="full-circle"
              height="6"
              viewBox="0 0 16 16"
              width="6"
            >
              <desc>
                full-circle
              </desc>
              <path
                d="M8 0a8 8 0 100 16A8 8 0 108 0z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          delegate.notConnected
        </p>
        <div
          class="troubleshootLink"
        >
          delegates.troubleshootOption
        </div>
      </div>
      <div
        class="Layout--vertical StyledProps--main"
        style="width: 5%;"
      >
        <div
          class="Layout--horizontal StyledProps--main itemActionContainer"
        >
          <span
            class="bp3-popover-wrapper bp3-dark"
          >
            <span
              class="bp3-popover-target"
            >
              <button
                class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow Button--withLeftIcon"
                type="button"
              >
                <span
                  class="bp3-icon StyledProps--main"
                  data-icon="Options"
                >
                  <svg
                    fill="none"
                    height="16"
                    viewBox="0 0 4 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M2 12.5a1 1 0 100 2 1 1 0 000-2zm-2 1a2 2 0 114 0 2 2 0 01-4 0zm2-12a1 1 0 100 2 1 1 0 000-2zm-2 1a2 2 0 114 0 2 2 0 01-4 0zM2 7a1 1 0 100 2 1 1 0 000-2zM0 8a2 2 0 114 0 2 2 0 01-4 0z"
                      fill="currentColor"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </button>
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Delegates Listing With Groups render data 1`] = `
<div>
  <div
    class="bp3-card bp3-interactive bp3-elevation-2 Card--card delegateItemContainer Card--interactive"
    tabindex="0"
  >
    <div
      class="Layout--horizontal StyledProps--main delegateItemSubcontainer"
    >
      <div
        class="delegateItemIcon"
        style="width: 80px;"
      >
        <span
          class="bp3-icon bp3-icon-chevron-right StyledProps--main expandIcon"
          icon="chevron-right"
        >
          <svg
            data-icon="chevron-right"
            height="20"
            viewBox="0 0 20 20"
            width="20"
          >
            <desc>
              chevron-right
            </desc>
            <path
              d="M13.71 9.29l-6-6a1.003 1.003 0 00-1.42 1.42l5.3 5.29-5.29 5.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l6-6c.18-.18.29-.43.29-.71 0-.28-.11-.53-.29-.71z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        <p
          class="StyledProps--font StyledProps--main"
          style="display: flex; align-items: center;"
        >
          <span
            class="bp3-icon StyledProps--main Text--icon StyledProps--padding-right-xsmall"
            data-icon="app-kubernetes"
          >
            <svg
              height="24"
              viewBox="0 0 32 30"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g
                fill="none"
              >
                <path
                  d="M15.94.023c-.228 0-.457 0-.685.229L4.512 5.28c-.457.229-.915.686-1.143 1.372L.626 18.08c-.229.457 0 1.143.229 1.6l.228.229 7.314 9.143c.458.457.915.685 1.6.685h11.886c.686 0 1.143-.228 1.6-.685l7.314-9.143c.458-.457.458-1.143.458-1.6L28.512 6.88c-.229-.685-.457-1.143-1.143-1.371L16.626.48c0-.228-.457-.457-.686-.457z"
                  fill="#326CE5"
                />
                <path
                  d="M15.94 3.909c-.457 0-.685.228-.685.686v2.057c0 .228-.229.228-.229.228v.229c-.457 0-.686 0-1.143.228-1.6.458-3.2 1.143-4.114 2.286l-.229-.228h-.457c-.228-.23-.457-.458-.914-.686l-.457-.457h-.229c-.228 0-.228-.229-.457-.229s-.457 0-.457.229c-.229.228-.229.685.228.914h.23c.228.229.456.229.456.229.457.228.686.457.914.685 0 0 .23.229.23.457l.228.229c-1.143 1.6-1.6 3.657-1.372 5.714h-.228l-.229.229c-.229 0-.686.228-1.143.228H4.97c-.457 0-.686.458-.457.686 0 .229.457.457.914.457h.229c.228 0 .457-.228.685-.228.457-.229.686-.229 1.143-.229.229 0 .229 0 .457.229h.229c.686 2.057 2.057 3.657 3.657 4.571l-.229.229v.457c-.228.228-.228.686-.685 1.143-.229.228-.229.228-.229.457v.228c-.228.458 0 .686.229.915.228.228.685 0 .914-.457v-.23c0-.228.229-.456.229-.685.228-.457.228-.914.457-1.143 0 0 .228 0 .228-.228l.229-.229c1.371.457 3.2.686 4.8.457.457 0 .686-.228 1.143-.228l.228.228s.229 0 .229.229c.228.229.228.686.457 1.143 0 .228 0 .457.229.686v.228c.228.457.457.457.914.457.228-.228.457-.457.228-.914v-.229c0-.228-.228-.228-.228-.457-.229-.457-.457-.685-.457-.914v-.686c1.828-1.143 2.971-2.743 3.657-4.571h.228s.23-.229.458-.229.685.229 1.142.229c.23 0 .458.228.686.228h.229c.457 0 .685-.228.914-.457 0-.228-.229-.685-.457-.685h-.914c-.458 0-.915 0-1.143-.23-.229 0-.229-.228-.229-.228h-.228c.228-.914 0-2.057-.229-2.971-.229-.914-.686-2.057-1.143-2.743l.229-.228c0-.23 0-.23.228-.458.229-.228.457-.457.915-.685.228 0 .457-.229.457-.229h.228c.229-.228.457-.686.229-.914-.229-.229-.686-.229-.914 0h-.229l-.457.457c-.229.229-.686.686-.914.686h-.458l-.228.228a8.778 8.778 0 00-5.257-2.514v-.229l-.229-.228V5.052c-.457-.686-.686-1.143-1.143-1.143zm-.685 5.028l-.229 3.429a.492.492 0 01-.457.457h-.229l-2.743-2.057c.915-.914 1.83-1.371 3.2-1.829h.458zm1.6 0c1.371.229 2.742.915 3.885 1.829l-2.743 1.829c-.228.228-.685.228-.685 0l-.229-.23-.228-3.428zm-6.4 3.2l2.514 2.286c.228.229.228.457 0 .686l-.229.228-3.2.915c-.228-1.6 0-2.972.915-4.115zm11.2 0c.457.686.685 1.372.914 2.058.228.685.228 1.37.228 2.057l-3.2-.915c-.228 0-.457-.457-.457-.685 0-.229 0-.229.229-.229l2.286-2.286zm-6.172 2.286h.914l.686.686-.228.914-.915.457-.914-.457-.229-.914.686-.686zm3.2 2.743c.229 0 .229 0 0 0l3.429.457c-.457 1.372-1.372 2.514-2.743 3.429l-1.372-3.2c.23-.229.23-.457.686-.686h0zm-5.486 0c.23 0 .458.229.458.457v.457l-1.372 3.2c-1.143-.685-2.057-1.828-2.743-3.428l3.657-.686zm2.743 1.371h.229l.228.229 1.6 2.971c-.228 0-.457.229-.685.229-1.143.229-2.515.229-3.657-.229l1.6-2.971c.457 0 .457-.229.685-.229h0z"
                  fill="#FFF"
                  stroke="#FFF"
                  stroke-width="0.25"
                />
              </g>
            </svg>
          </span>
        </p>
      </div>
      <div
        class="Layout--horizontal StyledProps--main"
        data-testid="groupHostName1"
        style="width: 30%;"
      >
        <div
          class="Layout--vertical StyledProps--main"
        >
          <div
            class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
            data-testid="delegate-1"
          >
            <p
              class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-black"
            >
              delegate-1
            </p>
          </div>
          <div
            class="groupHostName"
          >
            groupHostName1
          </div>
        </div>
      </div>
      <div
        class="StyledProps--font StyledProps--main connectivity"
        style="width: 25%;"
      >
        <div
          class="StyledProps--font StyledProps--main"
          style="display: inline-flex; flex-wrap: wrap;"
        />
        <span />
      </div>
      <div
        class="Layout--horizontal StyledProps--main instancesColumn"
        style="width: 10%;"
      >
        0
      </div>
      <div
        class="Layout--horizontal StyledProps--main"
        style="width: calc(15% - 40px);"
      >
        dummy date
      </div>
      <div
        class="Layout--vertical StyledProps--main"
        style="width: calc(15% - 40px);"
      >
        <p
          class="StyledProps--font StyledProps--main"
          style="display: flex; align-items: center;"
        >
          <span
            class="bp3-icon bp3-icon-full-circle StyledProps--main Text--icon StyledProps--padding-small StyledProps--color StyledProps--color-green600"
            icon="full-circle"
          >
            <svg
              data-icon="full-circle"
              height="6"
              viewBox="0 0 16 16"
              width="6"
            >
              <desc>
                full-circle
              </desc>
              <path
                d="M8 0a8 8 0 100 16A8 8 0 108 0z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          connected
        </p>
      </div>
      <div
        class="Layout--vertical StyledProps--main"
        style="width: 5%;"
      >
        <div
          class="Layout--horizontal StyledProps--main itemActionContainer"
        >
          <span
            class="bp3-popover-wrapper bp3-dark"
          >
            <span
              class="bp3-popover-target"
            >
              <button
                class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow Button--withLeftIcon"
                type="button"
              >
                <span
                  class="bp3-icon StyledProps--main"
                  data-icon="Options"
                >
                  <svg
                    fill="none"
                    height="16"
                    viewBox="0 0 4 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M2 12.5a1 1 0 100 2 1 1 0 000-2zm-2 1a2 2 0 114 0 2 2 0 01-4 0zm2-12a1 1 0 100 2 1 1 0 000-2zm-2 1a2 2 0 114 0 2 2 0 01-4 0zM2 7a1 1 0 100 2 1 1 0 000-2zM0 8a2 2 0 114 0 2 2 0 01-4 0z"
                      fill="currentColor"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </button>
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;
